--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -6,14 +6,12 @@ spring:
     url: jdbc:postgresql://localhost:5432/${BUZZERS_DB_DB}
     username: ${BUZZERS_DB_USER}
     password: ${BUZZERS_DB_PASS}
-    driver-class-name: org.postgresql.Driver
   jpa:
     hibernate:
-    ddl-auto: update
-    database-platform: org.hibernate.dialect.PostgreSQLDialect
+      ddl-auto: create-drop
+      database-platform: org.hibernate.dialect.PostgreSQLDialect
 
 jwt:
-  secret: "mySuperSecretKey"
   expiration: 600000
   refresh-expiration: 86400000
 
