--- a/pom.xml
+++ b/pom.xml
@@ -104,6 +104,7 @@
 	</dependencies>
 
 	<build>
+		<finalName>buzzers-app</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
