--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -11,6 +11,8 @@ spring:
     database-platform: org.hibernate.dialect.PostgreSQLDialect
   websocket:
     enabled: true
+  profiles:
+    active: ${BUZZERS_PROFILE}
 
 jwt:
   expiration: 600000
