--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,7 +23,8 @@ services:
       BUZZERS_DB_PWD: ${BUZZERS_DB_PWD}
       BUZZERS_DB_DRIVER: ${BUZZERS_DB_DRIVER}
       BUZZERS_SERVER_PORT: ${BUZZERS_SERVER_PORT}
-      BUZZERS_JWT_SECRET: ${BUZZERS_JWT_SECRET}
+      BUZZERS_JWT_SEC: ${BUZZERS_JWT_SEC}
+      BUZZERS_PROFILE: ${BUZZERS_PROFILE}
 
     networks:
       - buzzers-back
