--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,6 +25,7 @@ services:
       BUZZERS_SERVER_PORT: ${BUZZERS_SERVER_PORT}
       BUZZERS_JWT_SEC: ${BUZZERS_JWT_SEC}
       BUZZERS_PROFILE: ${BUZZERS_PROFILE}
+      BUZZERS_COOKIE_NAME: ${BUZZERS_COOKIE_NAME}
 
     networks:
       - buzzers-back
